Fix background image wierdness on iPhone (and hopefully android).

--- a/src/app/app.style.css
+++ b/src/app/app.style.css
@@ -1,8 +1,5 @@
-html, body{
-  height: 100%;
-  background: transparent;
-  margin: 0;
-}
+
+
 
 md-content {
   height: 100%;
